force-app/main/default/objects/sched_placeable_api__c/sched_placeable_api__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will hold placeable api key and values</description>
    <label>Scheduler Placeable API</label>
</CustomObject>