force-app/main/default/objects/sched_placeable_api__c/fields/api_endpoint__c.field-meta.xml
<CustomField>
    <fullName>api_endpoint__c</fullName>
    <label>API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>