force-app/main/default/objects/sched_placeable_api__c/fields/api_id__c.field-meta.xml
<CustomField>
    <fullName>api_id__c</fullName>
    <label>API Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>