force-app/main/default/objects/sched_placeable_api__c/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>