force-app/main/default/objects/sched_placeable_api__c/fields/is_production_org__c.field-meta.xml
<CustomField>
    <fullName>is_production_org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Production Org</label>
    <type>Checkbox</type>
</CustomField>